refactor(core): enforce DB and Bukkit thread boundaries across runtime operations